src/objects/LoginAccount__c.object
<CustomObject>
    <fields>
        <fullName>BlackTab__c</fullName>
        <formula>IF(ISBLANK(OrgId__c),
  &apos;&apos;,
  HYPERLINK(&apos;https://org62.my.salesforce.com/admin/sysAdminHome.jsp?search=&apos; + OrgId__c, &apos;Open&apos;, &apos;_blank&apos;)
)</formula>
        <label>Black Tab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>カテゴリ</label>
        <picklist>
            <picklistValues>
                <fullName>パッケージ作成</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>研修マスタ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>研修受講者</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>テキスト作成</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigName__c</fullName>
        <formula>IF(TEXT(Server__c) = &apos;https://prerelna1.pre.salesforce.com&apos;, &apos;Pre&apos;, &apos;Core&apos;)</formula>
        <label>Config Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCheckDate__c</fullName>
        <label>Last Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoginUrl__c</fullName>
        <formula>TEXT(Server__c) +
&apos;?un=&apos; + 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(UserName__c, &apos;%&apos;, &apos;%25&apos;), &apos;^&apos;, &apos;%5E&apos;), &apos;\\&apos;, &apos;%5C&apos;), &apos;@&apos;, &apos;%40&apos;), &apos;[&apos;, &apos;%5B&apos;), &apos;;&apos;, &apos;%3B&apos;), &apos;:&apos;, &apos;%3A&apos;), &apos;]&apos;, &apos;%5D&apos;), &apos;,&apos;, &apos;%2C&apos;), &apos;/&apos;, &apos;%2F&apos;), &apos;!&apos;, &apos;%21&apos;), &apos;&quot;&apos;, &apos;%22&apos;), &apos;#&apos;, &apos;%23&apos;), &apos;$&apos;, &apos;%24&apos;), &apos;&amp;&apos;, &apos;%26&apos;), &apos;\&apos;&apos;, &apos;%27&apos;), &apos;(&apos;, &apos;%28&apos;), &apos;)&apos;, &apos;%29&apos;), &apos;=&apos;, &apos;%3D&apos;), &apos;|&apos;, &apos;%7C&apos;), &apos;`&apos;, &apos;%60&apos;), &apos;{&apos;, &apos;%7B&apos;), &apos;+&apos;, &apos;%2B&apos;), &apos;*&apos;, &apos;%2A&apos;), &apos;}&apos;, &apos;%7D&apos;), &apos;&lt;&apos;, &apos;%3C&apos;), &apos;&gt;&apos;, &apos;%3E&apos;), &apos;?&apos;, &apos;%3F&apos;), &apos; &apos;, &apos;%20&apos;) +
&apos;&amp;pw=&apos; +
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Password__c, &apos;%&apos;, &apos;%25&apos;), &apos;^&apos;, &apos;%5E&apos;), &apos;\\&apos;, &apos;%5C&apos;), &apos;@&apos;, &apos;%40&apos;), &apos;[&apos;, &apos;%5B&apos;), &apos;;&apos;, &apos;%3B&apos;), &apos;:&apos;, &apos;%3A&apos;), &apos;]&apos;, &apos;%5D&apos;), &apos;,&apos;, &apos;%2C&apos;), &apos;/&apos;, &apos;%2F&apos;), &apos;!&apos;, &apos;%21&apos;), &apos;&quot;&apos;, &apos;%22&apos;), &apos;#&apos;, &apos;%23&apos;), &apos;$&apos;, &apos;%24&apos;), &apos;&amp;&apos;, &apos;%26&apos;), &apos;\&apos;&apos;, &apos;%27&apos;), &apos;(&apos;, &apos;%28&apos;), &apos;)&apos;, &apos;%29&apos;), &apos;=&apos;, &apos;%3D&apos;), &apos;|&apos;, &apos;%7C&apos;), &apos;`&apos;, &apos;%60&apos;), &apos;{&apos;, &apos;%7B&apos;), &apos;+&apos;, &apos;%2B&apos;), &apos;*&apos;, &apos;%2A&apos;), &apos;}&apos;, &apos;%7D&apos;), &apos;&lt;&apos;, &apos;%3C&apos;), &apos;&gt;&apos;, &apos;%3E&apos;), &apos;?&apos;, &apos;%3F&apos;), &apos; &apos;, &apos;%20&apos;)</formula>
        <label>Login Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <formula>HYPERLINK(LoginUrl__c, &apos;Open&apos;, &apos;_blank&apos;)</formula>
        <label>Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <label>Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <label>Photo Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IMAGE(PhotoUrl__c, &apos;photo&apos;, 24, 24)</formula>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <label>Server</label>
        <picklist>
            <picklistValues>
                <fullName>https://login.salesforce.com</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>https://login.database.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>https://test.salesforce.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>https://prerelna1.pre.salesforce.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StatusSignal__c</fullName>
        <formula>IF(Valid__c,
  IF(ISNULL(TrialExpirationDate__c),
    IMAGE(&apos;/resource/1311880464000/status_signal_zip/green.png&apos;, &apos;green&apos;, 24, 24),
    IF(TrialExpirationDate__c - NOW() &lt; 0,
      IMAGE(&apos;/resource/1311880464000/status_signal_zip/gray.png&apos;, &apos;gray&apos;, 24, 24),
      IF(TrialExpirationDate__c - NOW() &lt; 31,
        IMAGE(&apos;/resource/1311880464000/status_signal_zip/red.png&apos;, &apos;red&apos;, 24, 24),
        IF(TrialExpirationDate__c - NOW() &lt; 366/2,
          IMAGE(&apos;/resource/1311880464000/status_signal_zip/yellow.png&apos;, &apos;yellow&apos;, 24, 24),
          IMAGE(&apos;/resource/1311880464000/status_signal_zip/green.png&apos;, &apos;green&apos;, 24, 24)
        )
      )
    )
  ),
  IMAGE(&apos;/resource/1311880464000/status_signal_zip/gray.png&apos;, &apos;gray&apos;, 24, 24)
)</formula>
        <label>Status Signal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialExpirationDate__c</fullName>
        <label>Trial Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VersionName__c</fullName>
        <label>VersionName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Login Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Category__c</columns>
        <columns>StatusSignal__c</columns>
        <columns>NAME</columns>
        <columns>OrgName__c</columns>
        <columns>Photo__c</columns>
        <columns>Name__c</columns>
        <columns>UserName__c</columns>
        <columns>OrganizationType__c</columns>
        <columns>Login__c</columns>
        <columns>BlackTab__c</columns>
        <columns>TrialExpirationDate__c</columns>
        <columns>Instance__c</columns>
        <columns>VersionName__c</columns>
        <columns>Valid__c</columns>
        <columns>LastCheckDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Base_Edition</fullName>
        <columns>NAME</columns>
        <columns>OrgName__c</columns>
        <columns>Photo__c</columns>
        <columns>Name__c</columns>
        <columns>UserName__c</columns>
        <columns>OrganizationType__c</columns>
        <columns>LoginUrl__c</columns>
        <columns>Login__c</columns>
        <columns>BlackTab__c</columns>
        <columns>TrialExpirationDate__c</columns>
        <columns>Instance__c</columns>
        <columns>Valid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrganizationType__c</field>
            <operation>equals</operation>
            <value>Base Edition</value>
        </filters>
        <label>Base Edition</label>
    </listViews>
    <listViews>
        <fullName>Developer_Edition</fullName>
        <columns>NAME</columns>
        <columns>OrgName__c</columns>
        <columns>Photo__c</columns>
        <columns>Name__c</columns>
        <columns>UserName__c</columns>
        <columns>OrganizationType__c</columns>
        <columns>LoginUrl__c</columns>
        <columns>Login__c</columns>
        <columns>BlackTab__c</columns>
        <columns>TrialExpirationDate__c</columns>
        <columns>Instance__c</columns>
        <columns>Valid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrganizationType__c</field>
            <operation>equals</operation>
            <value>Developer Edition</value>
        </filters>
        <label>Developer Edition</label>
    </listViews>
    <listViews>
        <fullName>Enterprise_Edition</fullName>
        <columns>NAME</columns>
        <columns>OrgName__c</columns>
        <columns>Photo__c</columns>
        <columns>Name__c</columns>
        <columns>UserName__c</columns>
        <columns>OrganizationType__c</columns>
        <columns>LoginUrl__c</columns>
        <columns>Login__c</columns>
        <columns>BlackTab__c</columns>
        <columns>TrialExpirationDate__c</columns>
        <columns>Instance__c</columns>
        <columns>Valid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrganizationType__c</field>
            <operation>equals</operation>
            <value>Enterprise Edition</value>
        </filters>
        <label>Enterprise Edition</label>
    </listViews>
    <listViews>
        <fullName>Professional_Edition</fullName>
        <columns>NAME</columns>
        <columns>OrgName__c</columns>
        <columns>Photo__c</columns>
        <columns>Name__c</columns>
        <columns>UserName__c</columns>
        <columns>OrganizationType__c</columns>
        <columns>LoginUrl__c</columns>
        <columns>Login__c</columns>
        <columns>BlackTab__c</columns>
        <columns>TrialExpirationDate__c</columns>
        <columns>Instance__c</columns>
        <columns>Valid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrganizationType__c</field>
            <operation>equals</operation>
            <value>Professional Edition</value>
        </filters>
        <label>Professional Edition</label>
    </listViews>
    <listViews>
        <fullName>ap</fullName>
        <columns>NAME</columns>
        <columns>OrgName__c</columns>
        <columns>Photo__c</columns>
        <columns>Name__c</columns>
        <columns>UserName__c</columns>
        <columns>OrganizationType__c</columns>
        <columns>LoginUrl__c</columns>
        <columns>Login__c</columns>
        <columns>BlackTab__c</columns>
        <columns>TrialExpirationDate__c</columns>
        <columns>Instance__c</columns>
        <columns>Valid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance__c</field>
            <operation>equals</operation>
            <value>ap</value>
        </filters>
        <label>ap</label>
    </listViews>
    <nameField>
        <label>Login Account Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>